# piupiu

./: .env.example  .gitignore  LICENSE  README.md  piupiu.sh  pyproject.toml
src/piupiu/: __init__.py  __main__.py  agent.py  config.py
src/piupiu/ai/: _context.py  base.py  claude_provider.py  nim_provider.py  prompts.py
src/piupiu/channels/: base.py  cli.py  telegram.py
src/piupiu/crypto/: cipher.py  keychain.py
src/piupiu/graph/: engine.py  schema.py  storage.py
src/piupiu/privacy/: ollama_layer.py  presidio_layer.py  regex_layer.py  secrets_layer.py  shield.py  vault.py
src/piupiu/web/: server.py
tests/: test_context.py  test_crypto.py  test_graph.py  test_privacy.py
